<resources>
    <string name="app_name">ToDoApp Trial</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_task_1">This is Task 1</string>
    <string name="No_Category">No Category</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="to_do">To Do</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="first">If you couldn\'t find your Place/Ministry when trying to Add a Site to your Adventist Place dashboard, send us the below information so we can add the Place\'s details to our master South Pacific Division database.</string>
    <string name="sconde">If you couldn\'t find your Place/Ministry when trying to Add a Site to your Adventist Place dashboard, send us the below information so we can add the Place\'s details to our master South Pacific Division database.</string>
    <string name="four">If you couldn\'t find your Place/Ministry when trying to Add a Site to your Adventist Place dashboard, send us the below information so we can add the Place\'s details to our master South Pacific Division database.</string>
    <string name="three">If you couldn\'t find your Place/Ministry when trying to Add a Site to your Adventist Place dashboard, send us the below information so we can add the Place\'s details to our master South Pacific Division database.</string>
    <string name="firstT">add_missing_place</string>
    <string name="scondeT">search_place</string>
    <string name="fourT">sit_back_and_relax</string>
    <string name="threeT">make_a_call</string>
    <string name="notifications_and_reminders">The phone cannot receive notifications and reminders .</string>
    <string name="not_dec"><![CDATA[If you did not receive notifications , it may be because you did not give authority to receive notifications from the app . Please follow the steps below : \nApp Settings > Notifications and Reminders > Task Reminder does not Work > Authorization )\n 1. Click Settings in the sidebar ;\n 2. Click Notifications and Reminders ;\n 3. Click the first option Task reminder Does not Work ; \n 4. Enable the 3 authority options . \n If you still cannot receive notifications and reminders , please go to the phone system settings and authorize to receive notifications from the app . ( Phone Settings > Apps and Reminders > To - do list > Notifications > Show notifications )\n 1. Click the \' Settings \' of the mobile phone system ;\n 2. Click Apps and Reminders ; \n 3. Click on this application ; \n 4. Click Notifications ; \n 5. Turn on Show notifications\n]]></string>
    <string name="sound_dec"><![CDATA[Please check whether the sound of the mobile phone system is turned on .\n( Settings > Sound > Alarm volume and Ring volume )\n1. Click the settings from phone system ;\n2. Click Sound , the system gives a total of 4 ringtones ;\n3. If your task reminder type is Alarm , please turn on Alarm volume ; if your task reminder type Reminder , please turn on Ring volume .]]></string>
    <string name="sound">here is no sound for task reminders .</string>
    <string name="pro_dec">This situation may be due to a delay in the synchronization of Google\'s purchase information , please be patient ! You can also try as the following : \n1. Check the purchase status of the app on google play ; \n2. Update google play ;\n 3. Exit and re - enter the app ; \n4. Change network , etc. \nIf none of the above is valid , please check the purchase order number on google play , and send us the GPA number and payment screenshot .</string>
    <string name="pro">After purchasing the PRO version , PRO functions are still not activated .</string>
    <string name="formatted">If the phone is formatted or replaced , and then the PRO subscription is not activated anymore .</string>
    <string name="formatted_dec"><![CDATA[Please follow the steps below :\n( Confirm the network > Login > Upgrade to Pro Restore )\n1. Confirm that the network is in good condition\n2. Log in to the account that has successfully purchased the PRO version ;\n3. Click Upgrade to Pro in the sidebar ;\n4. Click Restore ;\n5. Other operations that can be tried : update Google Play ; exit and re - enter the app ; change network , etc.\nIf none of the above is valid , please check the purchase order number on Google Play , and send us the GPA number and payment screenshot .]]></string>
    <string name="account">Synchronize account information on different devices .</string>
    <string name="account_dec"><![CDATA[Please follow the steps below : \n( Confirm the network > Login > Settings >Account sync > Sync records > Log in on another device ) \n1. Confirm that the network is in good condition ;\n2. Login account ;\n3. Click Settings in the sidebar ;\n4. Click Account Sync ;\n5. Click Sync Record ;\n6. Log in to the same account on another device , and you can see all history tasks at this time .]]></string>
    <string name="calendar">How to import system calendar events ?</string>
    <string name="calendar_dec"><![CDATA[Please follow the steps below :\n( Settings > Import system calendar events > Switch button> Calendar sync )\n1. Click Settings in the sidebar ;\n2. Click Import System Calendar Events :\n3. Click the switch button ;\n4. Click Calendar Sync .]]></string>
</resources>