<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerThings.FAQActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="FAQ"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#0000"
            android:padding="10dp"
            android:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="19dp"
                android:elevation="10dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="298dp"
                        android:layout_height="33dp"
                        android:fontFamily="@font/passero_one"
                        android:text="@string/notifications_and_reminders"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toStartOf="@+id/notification_issues"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/notification_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#0000"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/not_dec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/passero_one"
                        android:padding="10dp"
                        android:text="@string/not_dec"
                        android:textAlignment="textStart"
                        android:textColor="#323232"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="19dp"
                android:elevation="10dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/item2"
                        android:layout_width="298dp"
                        android:layout_height="33dp"
                        android:layout_marginEnd="7dp"
                        android:fontFamily="@font/passero_one"
                        android:text="@string/sound"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toStartOf="@+id/sound_issues"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/sound_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#0000"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/sound_dec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/passero_one"
                        android:padding="10dp"
                        android:text="@string/sound_dec"
                        android:textAlignment="textStart"
                        android:textColor="#323232"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item2" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="19dp"
                android:elevation="10dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/item3"
                        android:layout_width="298dp"
                        android:layout_height="33dp"
                        android:layout_marginEnd="7dp"
                        android:fontFamily="@font/passero_one"
                        android:text="@string/pro"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toStartOf="@+id/pro_issues"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/pro_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#0000"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/pro_dec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/passero_one"
                        android:padding="10dp"
                        android:text="@string/pro_dec"
                        android:textAlignment="textStart"
                        android:textColor="#323232"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item3" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="19dp"
                android:elevation="10dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/item4"
                        android:layout_width="298dp"
                        android:layout_height="33dp"
                        android:layout_marginEnd="7dp"
                        android:fontFamily="@font/passero_one"
                        android:text="@string/formatted"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toStartOf="@+id/format_issues"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/format_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#0000"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/format_dec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/passero_one"
                        android:padding="10dp"
                        android:text="@string/formatted_dec"
                        android:textAlignment="textStart"
                        android:textColor="#323232"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item4" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="19dp"
                android:elevation="10dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/item5"
                        android:layout_width="298dp"
                        android:layout_height="33dp"
                        android:layout_marginEnd="7dp"
                        android:fontFamily="@font/passero_one"
                        android:text="@string/account"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toStartOf="@+id/account_issues"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/account_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#0000"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/account_dec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/passero_one"
                        android:padding="10dp"
                        android:text="@string/account_dec"
                        android:textAlignment="textStart"
                        android:textColor="#323232"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item5" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="19dp"
                android:elevation="10dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card5">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/item6"
                        android:layout_width="274dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="7dp"
                        android:fontFamily="@font/passero_one"
                        android:text="@string/calendar"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toStartOf="@+id/calendar_issues"
                        app:layout_constraintHorizontal_bias="0.869"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/calendar_issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#0000"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/calendar_dec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/passero_one"
                        android:padding="10dp"
                        android:text="@string/calendar_dec"
                        android:textAlignment="textStart"
                        android:textColor="#323232"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/item6" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>